add_library(${HK_SIGNALS} INTERFACE)

add_library(
  ${HK_NAMESPACE}::${HK_SIGNALS} ALIAS ${HK_SIGNALS})

target_include_directories(
  ${HK_SIGNALS}
  INTERFACE
  $<BUILD_INTERFACE:${${HK_SIGNALS}_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)

include(GNUInstallDirs)
install(
  TARGETS ${HK_SIGNALS}
  EXPORT ${HK_SIGNALS}_Targets
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})

include(CMakePackageConfigHelpers)
configure_package_config_file(
  "${PROJECT_SOURCE_DIR}/${HK_SIGNALS}Config.cmake.in"
  "${PROJECT_BINARY_DIR}/${HK_SIGNALS}Config.cmake"
  INSTALL_DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${HK_LIB}/cmake)

install(
  EXPORT ${HK_SIGNALS}_Targets
  FILE ${HK_SIGNALS}Targets.cmake
  NAMESPACE ${HK_NAMESPACE}::
  DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${HK_LIB}/cmake)

install(
  FILES
  "${PROJECT_BINARY_DIR}/${HK_SIGNALS}Config.cmake"
  DESTINATION
  "${CMAKE_INSTALL_DATAROOTDIR}/${HK_LIB}/cmake")

install(
  FILES ${HK_HEADERS}
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${HK_INCLUDE})
